# chiemboclyso

./: .env.example  .gitignore  Dockerfile.base  docker-compose.yml  rename_stars.py  requirements.txt  run_all.py  run_monolith.py  serve_apps.py  test_chart.py  vercel.json
acupoints_viz/: index.html
acupoints_viz/css/: style.css
acupoints_viz/js/: interactions.js  main.js  scene.js  visualization.js
api/: index.py
api/services_routes/: luc_nham_routes.py
apps/: README.md
apps/acupoints-viz/: README.md
apps/hexagram-viz/: README.md
apps/math-viz/: README.md
apps/octonion-viz/: README.md
apps/tuvi-web/: README.md
backend/: app.py  config.py  dependencies.py
backend/application/: __init__.py
backend/domain/: __init__.py
backend/infrastructure/: __init__.py
backend/presentation/: __init__.py
docs/: DOCS_MASTER.md  Thiên lý mệnh cảo Lesoi dịch.md
docs/Bát quái/: 64 quẻ.md  64_Que_Dich_Don_Hoang.md
docs/general/: ba_data_dictionary.md  ba_system_architecture.md  readme.md  (+8 more)
hexagram_viz/: index.html  script.js  style.css
math_viz/: index.html
octonion_viz/: index.html
services/: ARCHITECTURE.md  luc nham
services/shared/: README.md  __init__.py  path_setup.py  pyproject.toml
services/shared/analytics/: __init__.py
services/shared/chart/: __init__.py
services/shared/core/: __init__.py
services/shared/data/: __init__.py
services/shared/interpretation/: __init__.py
services/shared/logic/: __init__.py
services/shared/services/: __init__.py
services/shared/stars/: __init__.py
vi_dieu_phap/: VDP_MASTER_DOC.md  __init__.py
(+352 files in other folders)
